@@ -160,6 +160,16 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
       patch                | normalmode              |
       surface              | normalmode              |
 
+  ** Certain C++ predicate test functions have been deprecated and
+     replaced with the same functionality under the equivalent name used
+     in the Octave programming language.  These changes make it easier
+     for new programmers familiar with Octave to understand code written
+     in C++.
+
+      Function             | Replacement
+      ---------------------|------------------
+      is_hghandle          | ishghandle
+
 ---------------------------------------------------------
 
 See NEWS.4 for old news.
